--- a/README
+++ b/README
@@ -102,13 +102,13 @@ Experimental QUIC support for nginx
 
 3. Configuration
 
-    The HTTP "listen" directive got a new option "http3" which enables
-    HTTP/3 over QUIC on the specified port.
+    The HTTP "listen" directive got a new option "quic" which enables
+    QUIC as client transport protocol instead of TCP.
 
     The Stream "listen" directive got a new option "quic" which enables
     QUIC as client transport protocol instead of TCP or plain UDP.
 
-    Along with "http3" or "quic", it's also possible to specify "reuseport"
+    Along with "quic", it's also possible to specify "reuseport"
     option [8] to make it work properly with multiple workers.
 
     To enable address validation:
@@ -142,12 +142,13 @@ Experimental QUIC support for nginx
 
     A number of directives were added that configure HTTP/3:
 
+        http3
+        http3_hq
         http3_stream_buffer_size
         http3_max_concurrent_pushes
         http3_max_concurrent_streams
         http3_push
         http3_push_preload
-        http3_hq (requires NGX_HTTP_V3_HQ macro)
 
     In http, an additional variable is available: $http3.
     The value of $http3 is "h3" for HTTP/3 connections,
@@ -169,7 +170,7 @@ Example configuration:
         server {
             # for better compatibility it's recommended
             # to use the same port for quic and https
-            listen 8443 http3 reuseport;
+            listen 8443 quic reuseport;
             listen 8443 ssl;
 
             ssl_certificate     certs/example.com.crt;
@@ -297,6 +298,13 @@ Example configuration:
 
     Enables automatic conversion of preload links specified in the “Link”
     response header fields into push requests.
+
+
+    Syntax: http3 on | off;
+    Default: http3 on;
+    Context: http, server
+
+    Enables HTTP/3 protocol negotiation.
 
 
     Syntax: http3_hq on | off;
